# 22_mercado

./: .gitignore  README.md  app.py  my_llm.py  pyproject.toml  requirements.txt
src/vidmarmercado/: crew.py  main.py  my_llm.py
src/vidmarmercado/config/: agents.yaml  tasks.yaml
